Coded for sm md lg
coded for sm md lg in sccs using new grid systems

--- a/Kyle_Web2/index.html
+++ b/Kyle_Web2/index.html
@@ -93,16 +93,22 @@
 
       <section class="content-grid" id="safety">
         <div class="content-grid-item">
+
         <h1> Some Safety Tips to Keep in Mind </h1>
         <h5> Click the icons to learn more about each tip. </h5>
-        <img src="img/safety/mapvector.svg" alt="mapvector">
-        <p> Always carry current trail maps and understand how to use them </p>
-        <img src="img/safety/backpack.svg" alt="backpack">
-        <p> Avoid hitchhiking or accepting rides </p>
-        <img src="img/safety/utilityknife.svg" alt="utilityknife">
-        <p> Be mentally prepared for any risks you may encounter </p>
-        <img src="img/safety/flashlight.svg" alt="flashlight">
-        <p> Stay alert at all times </p>
+
+        <ul>
+
+        <li><img src="img/safety/mapvector.svg" alt="mapvector">
+        <p> Always carry current trail maps and understand how to use them </p></li>
+          <li><img src="img/safety/backpack.svg" alt="backpack">
+        <p> Avoid hitchhiking or accepting rides </p></li>
+          <li><img src="img/safety/utilityknife.svg" alt="utilityknife">
+        <p> Be mentally prepared for any risks you may encounter </p></li>
+          <li><img src="img/safety/flashlight.svg" alt="flashlight">
+        <p> Stay alert at all times </p>  </li>
+
+      </ul>
       </div>
       </section>
 
@@ -116,6 +122,7 @@
       <section class="content-grid" id="gallery">
         <div class="content-grid-item">
         <ul>
+          <li></li>
           <li></li>
           <li></li>
           <li></li>
@@ -136,6 +143,7 @@
 
         </ul>
       <a href="#"> SUBMIT </a>
+    </div>
       </section>
 
       <footer class="content-grid">
