--- a/Kyle_Web2/index.html
+++ b/Kyle_Web2/index.html
@@ -18,11 +18,29 @@
 
 <main>
 
-  <header class="content-grid">
-    <div class="content-grid-item">
+  <header>
+    <!-- <div class="content-grid-item">
     <img src="img/header/logo.svg" alt="logo">
     <img src="img/header/burger.svg" alt="burger">
-  </div>
+  </div> -->
+  <section id="logo">
+      <img src="img/header/logo.svg" alt="logo">
+    </section>
+
+    <section>
+            <button id="burger-icon">
+              <i class="fas fa-bars"></i>
+            </button>
+    </section>
+
+    <nav data-nav="main-navigation">
+            <ul>
+              <li><a href="#footpath">Footpath</a></li>
+              <li><a href="#map">Map</a></li>
+              <li><a href="#safety">Safety</a></li>
+              <li><a href="#gallery">Gallery</a></li>
+            </ul>
+            </nav>
   </header>
 
   <section class="content-grid" id="hero">
