--- a/Kyle_Web2/index.html
+++ b/Kyle_Web2/index.html
@@ -16,14 +16,59 @@
 
 <body>
 
+  <!-- Your options for data-navigation-position is: left | right -->
+      <!-- Your options for data-navigation-slide is: over | under | push -->
+      <section id="off-canvas-container" data-navigation-position="left" data-navigation-slide="push">
+          <div>
+              <button>
+                  <i class="far fa-times-circle" id="close-btn"></i>
+              </button>
+              <div id="nav-container">
+                  <nav data-nav="main-navigation">
+
+
+
+                      <ul>
+                          <li><a href="#footpath">Footpath</a></li>
+                          <li><a href="#map">Map</a></li>
+                          <li><a href="#safety">Safety</a></li>
+                          <li><a href="#gallery">Gallery</a></li>
+                      </ul>
+
+
+                  </nav>
+              </div>
+          </div>
+      </section>
+
+
+      <!-- burger icon -->
+      <!-- The burger icon needs to be outside of the main tag if you are going to position fix it. -->
+      <header data-fixed="fixed-item">
+        <section>
+          <button id="burger-icon" data-fixed="fixed-item">
+              <i class="fas fa-bars"></i>
+          </button>
+        </section>
+      </header>
+
+
+      <!--
+      *************** Your website content goes here! ***************
+      -->
+
 <main>
 
-  <header>
+  <!-- overlay for the view when the menu is visible. Please don't move -->
+          <div class="js-off-canvas-overlay" id="overlay"></div>
+          <!-- overlay for the view when the menu is visible. Please don't move -->
+          
+  <!-- <header> -->
     <!-- <div class="content-grid-item">
     <img src="img/header/logo.svg" alt="logo">
     <img src="img/header/burger.svg" alt="burger">
   </div> -->
-  <section id="logo">
+  <!-- <section id="logo">
       <img src="img/header/logo.svg" alt="logo">
     </section>
 
@@ -41,7 +86,7 @@
               <li><a href="#gallery">Gallery</a></li>
             </ul>
             </nav>
-  </header>
+  </header> -->
 
   <section class="content-grid" id="hero">
     <div class="content-grid-item">
