--- a/Kyle_Web2/index.html
+++ b/Kyle_Web2/index.html
@@ -28,10 +28,14 @@
     </section>
 
     <section>
-            <button id="burger-icon">
-              <i class="fas fa-bars"></i>
-            </button>
-    </section>
+    <div id="burger-icon">
+        <button id="burger-container">
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
+    </div>
+</section>
 
     <nav data-nav="main-navigation">
             <ul>
